Fix icon spacing in Arabic RTL mode globally

--- a/src/index.css
+++ b/src/index.css
@@ -18,8 +18,4 @@
   direction: rtl;
 }
 
-/* RTL spacing utilities */
-.rtl .space-x-reverse > * + * {
-  margin-left: 0;
-  margin-right: 0.75rem;
 }
